@@ -82,6 +82,25 @@ line.</p>
       manifest.</td>
     <td valign="top" align="center">No, defaults to UTF-8 encoding.</td>
   </tr>
+  <tr>
+    <td valign="top">mergeClassPathAttributes</td>
+    <td valign="top">Whether to merge the Class-Path attributes found
+      in different manifests (if updating).  If false, only the
+      attribute of the most recent manifest will be preserved.
+      <em>Since Ant 1.8.0</em>.
+      <br/>unless you also set flattenAttributes to true this may
+      result in manifests containing multiple Class-Path attributes
+      which violates the manifest specification.</td>
+    <td align="center" valign="top">No, default is false</td>
+  </tr>
+  <tr>
+    <td valign="top">flattenAttributes</td>
+    <td valign="top">Whether to merge attributes occuring more than
+      once in a section (this can only happen for the Class-Path
+      attribute) into a single attribute.
+      <em>Since Ant 1.8.0</em>.</td>
+    <td align="center" valign="top">No, default is false</td>
+  </tr>
 </table>
 
 <h3>Nested elements</h3>
